# sd-immich-tagger

./: .env.example  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: immich.rs  main.rs  metadata.rs  tags.rs
