[package]
name = "sd-immich-tagger"
version = "1.1.0"
edition = "2021"
description = "Backfill Immich descriptions and tags from Stable Diffusion PNG metadata"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
png = "0.17"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"
